--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "node src/index.js",
-    "db:setup": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
+    "postbuild": "npx sequelize db:migrate && npx sequelize db:seed:all",
     "services": "docker compose up --build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
