--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "npm i && npm i -D && node src/index.js",
+    "start": "node src/index.js",
+    "build": "npm install && npm install -D",
     "dev": "node src/index.js",
-    "postbuild": "npx sequelize db:migrate && npx sequelize db:seed:all",
+    "heroku-postbuild": "npx sequelize db:migrate && npx sequelize db:seed:all",
     "services": "docker compose up --build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
